# orthoseg-cpp

./: CMakeLists.txt  README.md
example/: README.md  metadata.json
example/src/: App.tsx  index.css  types.ts
example/src/utils/: canvasUtils.ts
src/: CanvasWidget.cpp  CanvasWidget.h  Document.cpp  Document.h  Labels.h  MainWindow.cpp  MainWindow.h  SegmentationEngine.cpp  SegmentationEngine.h  main.cpp
tests/: test_seg.cpp
